@@ -136,6 +136,7 @@ class tx_filelist_helper {
 						'date' => self::getHighestFileTimestamp($path . '/' . $dir_content, TRUE, $invalidFileNamePattern, $invalidFolderNamePattern),
 						'size' => self::getNumberOfFiles($path . '/' . $dir_content, FALSE, $invalidFileNamePattern, $invalidFolderNamePattern),
 						'path' => $path . $dir_content,
+						'url' => $path . rawurlencode($dir_content),
 						'fullpath' => PATH_site . $path . $dir_content,
 					);
 				}
@@ -146,6 +147,7 @@ class tx_filelist_helper {
 						'date' => filemtime($path . $dir_content),
 						'size' => filesize($path . $dir_content),
 						'path' => $path . $dir_content,
+						'url' => $path . rawurlencode($dir_content),
 						'fullpath' => PATH_site . $path . $dir_content,
 					);
 				}
